# Pyanist-Client

./: .gitignore  CMakeLists.txt  README.md
src/: dataTrans.cpp  dataTrans.h  executeCMD.cpp  executeCMD.h  fileSize.cpp  fileSize.h  main.cpp  playMusic.cpp  playMusic.h
